// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorObserver Snapshot ErrorObserver 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering with child as function 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering with error 1`] = `
<Text>
  Error
</Text>
`;

exports[`ErrorObserver should catch an error when thrown by a child component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "500",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Error
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    💥 Boom!
  </Text>
</View>
`;

exports[`ErrorObserver should catch an error when thrown null by a child component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "500",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Error
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginBottom": 8,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    An unknown error occured.
  </Text>
</View>
`;

exports[`ErrorObserver should not catch an error because check error is null 1`] = `
<Text>
  Hello
</Text>
`;
